Made changes in the js

--- a/java-quiz.html
+++ b/java-quiz.html
@@ -17,6 +17,6 @@
         <button class="next-button" id="next-button" onclick="nextQuestion()">Next</button>
     </div>
 
-    <script src="java-quiz.js"></script>
+    <script src="java-quiz-1.js"></script>
 </body>
 </html>
