New images Added

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <button class="btn" onclick="startQuiz('python')">Take Quiz</button>
             </div>
             <div class="package-card">
-                <img src="/images/js.jpg" alt="JavaScript Logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS12SMucV1yoXW-nEEb70ZXugC-RC7VM43xFg&s" alt="JavaScript Logo">
                 <p class="card-heading">Javascript</p>
                 <p class="card-text">Deep dive into Closures, ES6+ features, and Asynchronous programming to prove your
                     frontend mastery.</p>
@@ -207,7 +207,7 @@
                 <button class="btn" onclick="startQuiz('javascript')">Take Quiz</button>
             </div>
             <div class="package-card">
-                <img src="/images/react.jpg" alt="React Logo">
+                <img src="https://miro.medium.com/v2/resize:fit:1400/0*y6IcBe5J1AdALzXw.png" alt="React Logo">
                 <p class="card-heading">React</p>
                 <p class="card-text">Challenge yourself with Hooks, State Management, and Component Lifecycle patterns
                     in this modern library quiz.</p>
@@ -262,13 +262,13 @@
             </div>
             <div class="notes-wrapper">
                 <a href="https://basponccollege.org/LMS/EMaterial/Science/Comp/HVP/JS%20Notes.pdf" target="_blank">
-                    <img src="/images/js.jpg" alt="JS Notes">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS12SMucV1yoXW-nEEb70ZXugC-RC7VM43xFg&s" alt="JavaScript Logo" alt="JS Notes">
                     <p>Modern JavaScript</p>
                 </a>
             </div>
             <div class="notes-wrapper">
                 <a href="https://www.tutorialspoint.com/reactjs/reactjs_tutorial.pdf" target="_blank">
-                    <img src="/images/react.jpg" alt="React Notes">
+                    <img src="https://miro.medium.com/v2/resize:fit:1400/0*y6IcBe5J1AdALzXw.png" alt="React Notes">
                     <p>React Best Practices</p>
                 </a>
             </div>
